added years practice, compressed images

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                         </div>
                         <div class="col-sm-4">
                             <div class="fun-box">
-                                <p class="fun-number">$60k</p>
-                                <p class="fun-title">Money Recovered</p>
+                                <p class="fun-number">50+ years</p>
+                                <p class="fun-title">Combined Practice</p>
                             </div>
                         </div>
                     </div>
